--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Vite + Vue</title>
   </head>
-  <body>
+  <body class="container mx-auto py-16 px-6 mb:px-8 max-w-7xl">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
